--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "mll-lab/laravel-graphiql": "^4.0",
+        "nuwave/lighthouse": "^6.65"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
